credit.css
@import url('https://fonts.googleapis.com/css2?family=Anton&family=Roboto:wght@100&display=swap');

:root{
--accent:#3978be;
--text:#f8f8ff;
--dark-text:#3a3a3a;
--main-font:'Anton', sans-serif;
--secondary-font:'Roboto', sans-serif;
--icon-color:#d6a052;
}

*{
    margin:0;
    padding:0;
    box-sizing:border-box;
    list-style: none;
}

i{
    margin:0;
    padding:0;
}

body{
    list-style: none;
    text-decoration:none;
    font-family:var(--secondary-font);
    text-transform: uppercase;
    overflow-x:hidden;
}

/*RESPONSIVE NAVIGATION*************************************/
.secondary-nav-wrapper{
    position:fixed;
    top:0;
    right:0;
    background-color:#000;
    width:40%;
    height:100%;
    z-index:9999;
    border-radius:0 0 0 500px;
    display:none;
}

.secondary-nav-wrapper .close i{
    color:var(--text);

}

.secondary-nav ul{
    position:absolute;
    top:45%;
    left:55%;
    transform:translate(-50%, -50%);
}
.secondary-nav ul li a{
    color:var(--text);
    text-decoration:none;
    font-size:1.1rem;
    font-family:var(--secondary-font);
    padding:0;
    line-height:5rem;
    
}
.close{
    position:absolute;
    top:20px;
    right:80px;
    color:var(--text);
}
.close i{
    font-size:2rem;
    cursor:pointer;
}

.container{
    max-width:1140px;
    margin:0 auto;
}

.jumbotron{
   background-image:linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url(Images/credithome.jpg);
   background-size:cover;
   background-position: center;
   height:100vh;
}

.logo{
    width:120px;
    height:70px;
    cursor:pointer;
}
.open i{
    color:var(--text);
    font-size:2rem;
    cursor:pointer;
    display:none;
}

.nav-btn{
    border:none;
    outline:none;
    background-color:var(--accent);
    padding:10px;
    text-transform:uppercase;
    color:var(--text);
    letter-spacing:2px;
    border-radius:20px;
}

.nav-btn:hover{
    background-color:#26447f;
    transition: 0.3s ease-in-out;
}


.main-nav{
    display:flex;
    justify-content: space-around;
    align-items: center;
    position: fixed;
    top:0;
    z-index:999;
    background-color:#000;
    width:100%;
}

.main-nav ul li{
    display:inline-block;
    margin:10px 30px 0 30px;
    list-style:none;
}

.main-nav ul li a{
    text-decoration:none;
    color:var(--text);
    font-size:0.8rem;
    text-transform:uppercase;
    letter-spacing:0.4rem;
}

.main-nav ul li a{
    color:var(--text);
}

.main-nav ul li a:hover{
    color:var(--accent);
    transition: 0.3s ease-in-out;
}

.main-nav ul li .active{
    color:var(--accent);
    border-bottom: 2px solid var(--accent);
    font-weight: bold;
}

.heading{
    position:absolute;
    top:50%;
    transform:translateY(-50%);
}

.heading h1{
    font-size:4.8rem;
    text-transform:uppercase;
    letter-spacing:6px;
    color:var(--text);
    max-width:60%;
    font-family: var(--main-font);
}

.heading p{
    font-size:1rem;
    text-transform: uppercase;
    letter-spacing:2px;
    color:var(--text);
}

.info-1{
    display:flex;
    flex-direction:column;
    margin-left:90px;
}

.info-1 i{
    color:var(--text);
    margin-right:5px;
}

.info-1 i p{
    font-family:var(--secondary-font);
    letter-spacing:3px;
}

.info-tab{
    display:flex;
    flex-direction: row;
}

.btn{
    background-color:var(--accent);
    color:var(--text);
    padding:20px;
    cursor:pointer;
    margin:30px 0 0 0;
    text-transform: uppercase;
    letter-spacing:3px;
    border:none;
    outline: none;
    width:250px;
    
}

.btn:hover{
    background-color:#26447f;
    color:var(--text);
}

.sct{
    background: rgb(2,0,36);
    background: -moz-linear-gradient(90deg, rgba(2,0,36,1) 0%, rgba(8,8,57,1) 34%, rgba(57,120,190,1) 100%);
    background: -webkit-linear-gradient(90deg, rgba(2,0,36,1) 0%, rgba(8,8,57,1) 34%, rgba(57,120,190,1) 100%);
    background: linear-gradient(90deg, rgba(2,0,36,1) 0%, rgba(8,8,57,1) 34%, rgba(57,120,190,1) 100%);
    filter: progid:DXImageTransform.Microsoft.gradient(startColorstr="#020024",endColorstr="#3978be",GradientType=1);
    color:var(--text);
    height:100vh;
}


.sct-title{
        font-family:var(--main-font);
        font-size:5rem;
        letter-spacing:3px;
        text-transform:uppercase;
        text-align: center;
        padding:30px;
        margin-bottom:50px;
    }
    
.grid-wrapper-1{
    background:linear-gradient(rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.7)), url(Images/products1.jpg);
    background-size:cover;
    background-position: center;
    background-repeat:no-repeat;
    display:grid;
    grid-template-columns:repeat(4,1fr);
    text-align: center;
    position:absolute;
    left:50%;
    transform:translateX(-50%);
    width:100vw;
    padding:150px;
}

.grid-wrapper-1 .step{
    margin:0 10px;
}
.step h3{
    font-family:var(--main-font);
    letter-spacing:3px;
}
.step i{
    font-size: 6rem;
}
.step p{
    line-height:2rem;
}



.grid-wrapper{
    display:grid;
    grid-template-columns:repeat(3,1fr);
    background-color: rgba(0, 0, 0, 0.5);
}
.grid-item{
    margin:0 auto;
}
.grid-item ul li{
    font-size: 1.2rem;
    line-height: 5rem;
    font-family:var(--secondary-font);
    letter-spacing:2px;
}

.inline{
    display:flex;
    flex-direction:row;
    align-items:center;
}

.inline i{
    margin-right:10px;
}
/*SECTION 4*/

.fa-check{
    color:green;
}

.fa-times{
    color:red;
}
.sct-4{
    height:auto;
}

.sct-4-grid-wrapper{
    text-align:center;
    display:grid;
    grid-template-columns: repeat(3, 1fr);

}

.sct-4-grid-item{
    text-align:center;
    margin:0 30px 0 30px;
}

.header{
    height:50px;
    display:flex;
    align-items:center;
    justify-content: center;
}

.header h4{
    color:var(--text);
    font-size:1rem;
    font-family:var(--main-font);
    letter-spacing:4px;
    margin:0;
    align-items: center;
}

.header-1{
    background-color:#183766;
}

.header-2{
    background-color:var(--icon-color);
}

.header-3{
    background-color:#4a4950;
}

.price h1{
    font-family:var(--main-font);
    font-size:6rem;
    letter-spacing:3px;
    margin:0;
    padding:40px;
}

.price h1 span{
    font-size:1.5rem;
}

.price p{
    margin:0;
}

.price-1{
    background-color:#2d5ca4;
}

.price-2{
    background-color:#f7b65c;
}

.price-3{
    background-color:#595861;
}

.content{
    background-color:var(--text);
    color:var(--dark-text);
    padding:10px 0 10px 0;
    margin-bottom:80px;
}

.content ul{
    padding:0;
}

.content ul li{
    font-size:0.8rem;
    letter-spacing:2px;
    padding:0 10px;
}


/*Footer*/

footer{
    text-align:center;
    margin-top:auto;
    background-color:#000;
    color:var(--text);
}

.social-icons i{
    font-size:1.5rem;
    margin:0 15px 10px 15px;
    cursor:pointer;
}

.social-icons i:hover{
    color:var(--accent);
}

.ftr-nav {
    display:flex;
    flex-direction:row;
    align-items:center;
}

.sct-4 .faq a{
    color:var(--text);  
    letter-spacing:2px;
    font-size:1.2rem;
}

.ftr-nav p{
    font-size:0.8rem;
}

.ftr-nav ul li{
    display:inline-block;
    margin:0 30px 0 30px;
    letter-spacing:2px;
    cursor:pointer;
    font-size:0.8rem;
}

.ftr-nav ul li a {
    text-decoration:none;
    color:var(--text);
}

.footer-btm{
    display:flex;
    flex-direction:row;
    justify-content:space-between;
}

.footer-btm .copyright{
    padding-right:32px;
}



@media only screen and (max-width:1366px){
    .open i{
        display:block;
    }

    .secondary-nav-wrapper .nav-btn{
        display:block;
    }
    
    .main-nav{
        justify-content: space-between;
    }

    .logo img{
        margin:0 80px 0 80px;
    }

    .open i{
        margin:0 80px 0 80px;
    }
    
    .main-nav ul{
        display:none;
    }

    .nav-btn{
        display:none;
    }

    .heading-2{
        display:none;
    }

    /*NAVIGATION*********************/
    .heading h1{
        max-width:80%;
    }

    /*HEADING*************************/
}

@media only screen and (max-width:1024px){

    .secondary-nav-wrapper{
        width:55%;
    }
    
    .heading{
        padding-left:30px;
    }

    .sct-3 .grid-item-text{
        width:80%;
        margin:0 auto;
    }
    
    }
    

    /*iphone  6/7/8 plus and below*/

@media only screen and (max-width:414px){
    /*copy and paste************/
    .sct-3{
        display:none;
    }
    
    
    body{
        overflow-x:hidden;
    }
    
    .main-nav{
        justify-content:space-between;
        max-width:414px;
    }
    
    .secondary-nav-wrapper{
        width:100%;
        border-radius:0;
    }

    .close{
        position:absolute;
        top:10px;
        right:45px;
    }

    .secondary-nav ul{
        padding:0;
    }

    .secondary-nav ul li a {
        font-size:1rem;
        text-align:center;
    }

    .sct{
        height:auto;
    }

    .heading{
        padding:0;
        top:50%;
    }

    .heading .info-1{
        margin-left:30px;
    }

    .heading h1{
        font-size:2rem;
        width:100%;
        margin:0;
        line-height:3rem;
    }



    .heading p{
        font-size:1rem;
        width:80%;
        margin:0;
        line-height:2rem;
    }

    .btn{
        margin:5px 0 0 0;
    }

    .logo{
        width:80px;
        height:50px;
        cursor:pointer;
    }

    .open i{
        margin-right:40px;
    }

    .logo img{
        margin-left:40px;
        padding:0;
    }

    .jumbotron{
        max-width: 414px;
        width:414px;
        height:100vh;
    }

    .sct-2 .sct-title{
        margin:0;
    }

    .grid-wrapper-1{
        grid-template-columns:repeat(1, 4fr);
        padding: 0 0 80px 0;
    }

    .grid-wrapper-1 p{
        width:80%;
        margin:0 auto;
        padding-bottom:50px;
    }

    .grid-item-2,
    .grid-item-3{
        display:none;
    }



    /*End of copy and paste*/
}

